Current - Self-Hosting - k3s/cluster/apps/paperless/paperless.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: default
  labels:
    app: paperless
spec:
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
      - name: paperless
        image: ghcr.io/paperless-ngx/paperless-ngx:2.13.5 # {"$imagepolicy": "flux-system:paperless"}
        volumeMounts:
          - name: data-paperless
            mountPath: /usr/src/paperless/data
          - name: media-paperless
            mountPath: /usr/src/paperless/media
          - name: export-paperless
            mountPath: /usr/src/paperless/export
          - name: consume-paperless
            mountPath: /usr/src/paperless/consume
          - name: ca-bundle
            mountPath: /usr/src/paperless/lan.pem
            subPath: lan.pem
      volumes:
        - name: data-paperless
          hostPath:
            path: /mnt/raid/nas/paperless/data
        - name: media-paperless
          hostPath:
            path: /mnt/raid/nas/paperless/media
        - name: export-paperless
          hostPath:
            path: /mnt/raid/nas/paperless/export
        - name: consume-paperless
          hostPath:
            path: /mnt/raid/nas/paperless/consume
        - name: ca-bundle
          hostPath: 
            path: /mnt/raid/nas/ssl
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: paperless
  labels:
    service: paperless
spec:
  selector:
    app: paperless
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: paperless
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`paperless.lan`)
    services:
      - kind: Service
        name: paperless
        port: 8000
  tls:
    secretName: paperless-secret
